fix title and summary overlap on narrow screens

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -5,6 +5,7 @@
 .header__title {
   color: white;
   text-decoration: none;
+  line-height: 1;
   h1 {
     margin: 0;
   }
