--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -7,6 +7,7 @@
 .page-header__title {
   font-weight: 300;
   margin: 0;
+  line-height: 1;
   span {
     font-weight: 700;
   }
